# bot-the-defect

./: .env.example  .gitignore  README.md  chatter.py  chatter_interface.py  dotencexample  loader.py  main.py  melobot_start.py  pyproject.toml  run.py
adapters/: cli_adapter.py  onebot_adapter.py
config/: settings.py
core/: admin.py  interfaces.py  models.py  user_service.py
docs/: TODO.md
extract-text/: convert_json.py  extract_chunk.py
knowledge/: background.txt  roles.json
services/: factories.py  general_chat_service.py  llm_factory.py  news_service.py  scheduler_service.py
services/roleplay_pwvn/: chatter.py  loader.py  query_engine.py
